looper/looper-namespace.yml
kind: Namespace
apiVersion: v1
metadata: 
  name: looper-namespace
  labels:
    name: looper-namespace
