looper/echo-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echo-deployment
spec:
  replicas: 3
  template:
    metadata:
        labels:
            app: echo
            runtime-environment: production
            tier: internal-service
        annotations:
           version: "3.0"
    spec:
      containers:
      - name: echo
        image: gcr.io/google_containers/echoserver:1.4
        ports:
        - containerPort: 8080
        resources:
            requests:
              cpu: 200m
              memory: 256Mi
