looper/looper-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: looper-deployment
spec:
  replicas: 3
  template:
    metadata:
        labels:
            app: looper
            runtime-environment: production
            tier: internal-service
        annotations:
           version: "3.0"
    spec:
      containers:
      - name: looper
        image: docmseco/looper
        resources:k
            requests:
              cpu: 200m
              memory: 256Mi
